methods.picture.MethodsPicture.scala.error
Compilation error:
MethodsPicture:20: error: value Yellow is not a member of object java.awt.Color
   makeV(Color.Yellow)
               ^